--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -20,28 +20,28 @@ const iconClasses = `${sizes[size]} ${className}`;
 // Mapeo de iconos disponibles
 const iconMap: Record<string, string> = {
   // Tech skills icons
-  'java': '/src/assets/icons/java.svg',
-  'csharp': '/src/assets/icons/CSharp.svg',
-  'html': '/src/assets/icons/HTML.svg',
-  'css': '/src/assets/icons/CSS.svg',
-  'javascript': '/src/assets/icons/JavaScript.svg',
-  'typescript': '/src/assets/icons/TypeScript.svg',
-  'nodejs': '/src/assets/icons/Node.js.svg',
-  'angular': '/src/assets/icons/Angular.svg',
-  'mysql': '/src/assets/icons/MySQL.svg',
-  'sqlserver': '/src/assets/icons/SqlServer.svg',
-  'oracle': '/src/assets/icons/Oracle.svg',
-  'mongodb': '/src/assets/icons/MongoDB.svg',
-  'git': '/src/assets/icons/GIT.svg',
-  'azure': '/src/assets/icons/Azure.svg',
-  'figma': '/src/assets/icons/Figma.svg',
+  'java': '/assets/icons/java.svg',
+  'csharp': '/assets/icons/CSharp.svg',
+  'html': '/assets/icons/HTML.svg',
+  'css': '/assets/icons/CSS.svg',
+  'javascript': '/assets/icons/JavaScript.svg',
+  'typescript': '/assets/icons/TypeScript.svg',
+  'nodejs': '/assets/icons/Node.js.svg',
+  'angular': '/assets/icons/Angular.svg',
+  'mysql': '/assets/icons/MySQL.svg',
+  'sqlserver': '/assets/icons/SqlServer.svg',
+  'oracle': '/assets/icons/Oracle.svg',
+  'mongodb': '/assets/icons/MongoDB.svg',
+  'git': '/assets/icons/GIT.svg',
+  'azure': '/assets/icons/Azure.svg',
+  'figma': '/assets/icons/Figma.svg',
   
   // Theme icons
-  'light-mode': '/src/assets/icons/light_mode.svg',
-  'dark-mode': '/src/assets/icons/dark_mode.svg',
+  'light-mode': '/assets/icons/light_mode.svg',
+  'dark-mode': '/assets/icons/dark_mode.svg',
   
   // Social media icons
-  'whatsapp': '/src/assets/icons/whatsapp.svg'
+  'whatsapp': '/assets/icons/whatsapp.svg'
 };
 
 // Importar dinámicamente el SVG
